Course4/Week1/SearchingEarthquakeDataStarterProgram/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\LearnOOP\CourseraJava\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
D:\LearnOOP\CourseraJava\BlueJ\lib\bluejcore.jar;D:\LearnOOP\CourseraJava\BlueJ\lib\junit-4.11.jar;D:\LearnOOP\CourseraJava\BlueJ\lib\hamcrest-core-1.3.jar;D:\LearnOOP\CourseraJava\BlueJ\lib\lang-stride.jar;D:\LearnOOP\CourseraJava\BlueJ\lib\userlib\apache-csv.jar;D:\LearnOOP\CourseraJava\BlueJ\lib\userlib\courserajava.jar;D:\LearnOOP\CourseraJava\BlueJ\lib\userlib\pi4j-core.jar;D:\LearnOOP\CourseraJava\BlueJ\lib\userlib\pi4j-device.jar;D:\LearnOOP\CourseraJava\BlueJ\lib\userlib\pi4j-gpio-extension.jar;D:\LearnOOP\CourseraJava\BlueJ\lib\userlib\pi4j-service.jar;D:\LearnOOP\CourseraJava\Course4\Week1\SearchingEarthquakeDataStarterProgram
-d
D:\LearnOOP\CourseraJava\Course4\Week1\SearchingEarthquakeDataStarterProgram\doc
-encoding
UTF-8
-charset
UTF-8
D:\LearnOOP\CourseraJava\Course4\Week1\SearchingEarthquakeDataStarterProgram\EarthQuakeClient.java
<---- end of javadoc command ---->
Loading source file D:\LearnOOP\CourseraJava\Course4\Week1\SearchingEarthquakeDataStarterProgram\EarthQuakeClient.java...
D:\LearnOOP\CourseraJava\Course4\Week1\SearchingEarthquakeDataStarterProgram\EarthQuakeClient.java:14: error: <identifier> expected
            if (qe.)
                   ^
D:\LearnOOP\CourseraJava\Course4\Week1\SearchingEarthquakeDataStarterProgram\EarthQuakeClient.java:15: error: illegal start of statement
        }
        ^
2 errors
